[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = {version = "0.18.0", features = ["serde"]}
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["full"] }
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.132"
simple_video = { path = "../simple_video" }
